6.14.1.6
    Documentation:
        * Removed the Coverity Scan badge from the top-level, version-specific "index.html" page
          because the code is now being scanned by GitHub's CodeQL

6.14.1.5        2022-12-14T11:45:29-0700
    NOAAPort:
        * GEMPAK Tables: Added missing PDTNs

6.14.1.4        2022-11-23T10:24:58-0700
    ldmd(1):
        * Ensured that the LDM server is the process group leader.

6.14.1.3        2022-11-22T13:16:41-0700
    NOAAPort:
        * blender(1): Corrected determination of frame ordering

6.14.1.2        2022-11-22T11:55:49-0700
    NOAAPort:
        * blender(1): Added frame-header sequence-number to determination of frame ordering.

6.14.1.1        2022-11-21T11:12:11-0700
    6.13.17 should have been 6.14.0

    Installation:
        * Modified "make check" in regutil/ to accomodate GitHub actions
        * Modified include of "ldm.h" in "fix_clnt.pl" to accomodate GitHub actions
        * Eliminated the configure(1)-script option "--disable-root-actions". Installation now
          proceeds as if this option were always specified. The "make install" step now prints a
          message at the end stating that the superuser (i.e., "root") must now execute the command
          "make root-actions". This was necessary in order to migrate the continuous-integration
          workflow to GitHub actions: autoconf(1) 2.71 on the Ubuntu 22.04 platform creates an
          invalid configure(1) script if the autoconf(1) configuration-file contains this option.

          Installation from the unpacked distribution now comprises the following steps (details
          omitted):
            - Execute the configure(1) script as the LDM user
            - "make install" as the LDM user
            - "make root-actions" as root
          See the HTML documentation for details.
        * The configure(1) script now requires that a C++ compiler be found if the "--with-noaaport"
          option is specified

    ldmd(1):