@@ -16,12 +16,12 @@
       has the following characteristics:</p>
     <ul>
       <li>The user's name is "ldm".</li>
-      <li>The user's home directory is "/opt/ldm".  If you want to use another home-directory, then you should install
+      <li>The user's home directory is "/home/ldm".  If you want to use another home-directory, then you should install
         the <a href="glindex.html#LDM">LDM</a> system from a source distribution rather than from a binary one.</li>
       <li>The subdirectory structure of the user's home directory is as	specified in the relevant
         <a href="preinstallation.html#subdirs">preinstallation step</a>.</li>
-      <li>The user's <a href="glindex.html#system group">system group</a>	is usually the same as that of the
-        <a href="glindex.html#McIDAS">McIDAS</a> and	<a href="glindex.html#GEMPAK">GEMPAK</a> users so that the
+      <li>The user's <a href="glindex.html#system group">system group</a> is usually the same as that of the
+        <a href="glindex.html#McIDAS">McIDAS</a> and <a href="glindex.html#GEMPAK">GEMPAK</a> users so that the
         <a href="glindex.html#pqact">pqact</a> process can create files in those user's data directories.</li>
     </ul>
 
