@@ -26,7 +26,7 @@
     <ul>
       <li>The canonical name of the user is &quot;<code>ldm</code>&quot;, but that's not a requirement.</li>
       <li>The installation process is simpler if the LDM user's home-directory is on local disk.
-        &quot;<code>/opt/ldm</code>&quot; and &quot;<code>/home/ldm</code> are viable  candidates. </li>
+        &quot;<code>/home/ldm</code>&quot; and &quot;<code>/home/ldm</code> are viable  candidates. </li>
       <li>Use a group ID that allows other non-<a href="glindex.html#LDM">LDM</a>
         processes to write files (decoders, etc.). The
         <a href="https://www.unidata.ucar.edu/software/mcidas/index.html">McIDAS</a> and
