@@ -143,7 +143,7 @@
       (<i>e.g.</i>, the <b>syslog</b> daemon). One possible LDM script is:</p>p>
     <pre>
       export PATH=/bin:/usr/bin:/usr/etc:/usr/ucb
-      LDMADMIN=/opt/ldm/bin/ldmadmin
+      LDMADMIN=/home/ldm/bin/ldmadmin
 
       case "$1" in
 
